2008-12-03  Martin Leidig <mleidig@schlund.de>

	* projects/core/build/create_serverxml.xsl: fixed namespace issue
	which prevented project disabling from working

2008-12-02  Martin Leidig <mleidig@schlund.de>

	* src/de/schlund/pfixxml/serverutil/SessionAdmin.java: added new
	static method getTotalSessionNumber() which returns the total number
	of sessions from all JMX-registered SessionAdmin instances.

2008-12-02  Martin Leidig <mleidig@schlund.de>

	Fixed issue with Tomcat port element naming.

	* docs/docbook/src/reference/configuration.xml
	* projects/core/build/create_ajpconf.xsl
	* projects/common/conf/projects.xml
	* skel/projects/common/conf/projects.xml

2008-12-02  Martin Leidig <mleidig@schlund.de>

	* src/org/pustefixframework/config/contextxmlservice/parser/ContextDefaultPageParsingHandler.java:
	get default and variant elements from DOM using namespace

2008-11-25  Martin Leidig <mleidig@schlund.de>

	Released Pfixcore 0.13.3

2008-11-25  Martin Leidig  <mleidig@schlund.de>

	Updated Spring to 2.5.6.

	* src/org/pustefixframework/config/contextxmlservice/parser/internal/StateConfigImpl.java:
	make map modifiable to fix issue with Spring 2.5.6
	PropertyPlaceholderConfigurer 

	Added:
	* lib/spring-2.5.6.jar
	* lib/spring-webmvc-2.5.6.jar

	Removed:
	* lib/spring-2.5.3.jar
	* lib/spring-webmvc-2.5.3.jar

2008-11-24  Martin Leidig  <mleidig@schlund.de>

	Re-added getRequestCookies() to Context because there are use cases
	for accessing cookies in Handlers and you don't want to write an own
	state or interceptor only for storing cookie information.
	* src/de/schlund/pfixcore/workflow/Context.java
	* src/de/schlund/pfixcore/workflow/ContextImpl.java
	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java

2008-11-24  Martin Leidig  <mleidig@schlund.de>

	Fixed config-include bug for resources (namespace unawareness problem)
	* src/org/pustefixframework/config/contextxmlservice/parser/ContextResourceParsingHandler.java
