@@ -1,3 +1,12 @@
+2008-12-03  Andreas Kurth <andreas.kurth@1und1.de>
+
+	Removed obsolete statusmessages file.
+
+	Removed:
+	* projects/core/dyntxt/statusmessages.xml
+	Modified:
+	* skel/build-skel.xml
+
 2008-12-03  Martin Leidig <mleidig@schlund.de>
 
 	* projects/core/build/create_serverxml.xsl: fixed namespace issue
